...
            "state" : "translated",
            "value" : "定位超时，请重试"
          }
        }
      }
    },
    "对数学表达式求值，支持加减乘除、括号、浮点数" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "new",
            "value" : ""
...
